Fix image overflow

--- a/src/app/components/gym-essentials/gym-essentials.component.scss
+++ b/src/app/components/gym-essentials/gym-essentials.component.scss
@@ -4,14 +4,14 @@
 
     position: relative;
     height: 100%;
-    width: 100vw;
+    width: 100%;
     text-align: justify;
 
     .background{
         position: relative;
 
         img{
-            width: 100vw;
+            width: 100%;
             height: 100%;
         }
 
@@ -30,7 +30,7 @@
         position: absolute;
         top: 20%;
         left: 25%;
-        width: 53.4%; 
+        width: 55%; 
         
         span{
             color: darkslategray;
